# fdtd

./: LICENSE  Makefile.am  README.md  configure.ac
doc/: Makefile  fdtd.tex
src/: Makefile.am  main.c
src/core/: Makefile.am  array_add.f90  boundary.cxx  calc_dt.f90  calc_poynting.f90  e2exyz.f90  electric_eqn.f90  h2hxyz.f90  magnetic_eqn.f90
src/core/test/: e2m.cxx  e2m.f90
src/include/: 3darray.h  boundary.h  core.h
