#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ([2.67])
AC_INIT([fdtd],[0.01])
AM_INIT_AUTOMAKE([foreign])

AC_CONFIG_HEADER([config/config.h])

#AM_PROG_LIBTOOL
#AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_EXEEXT

# C compiler
AC_PROG_CC
AC_PROG_CC_C_O
AC_LANG(C)

# C++ compiler
AC_PROG_CXX
#AC_PROG_CXX_C_O
AC_LANG(C++)

# fortran compiler
AC_PROG_FC
AC_PROG_FC_C_O
#AC_FC_SRCEXT(f90)
#AC_LANG(Fortran)

AC_PROG_RANLIB


# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/core/Makefile])
AC_OUTPUT

